--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
+    "@vercel/analytics": "^1.5.0",
     "leaflet": "^1.9.4",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
