--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
     "@vercel/analytics": "^1.5.0",
+    "framer-motion": "^12.5.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.479.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
