--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
     "next": "15.2.2",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.15",
     "vercel": "^41.3.2"
   },
   "devDependencies": {
